# softkvm

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build-ubuntu20.sh
config/: softkvm.toml.example
crates/client/: Cargo.toml
crates/client/src/: clipboard.rs  edge.rs  inject.rs  main.rs  network.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  layout.rs  lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  message.rs  serialize.rs
crates/server/: Cargo.toml
crates/server/src/: capture.rs  clipboard.rs  edge.rs  main.rs  network.rs
