[package]
name = "softkvm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
softkvm-protocol = { path = "../protocol" }
softkvm-common = { path = "../common" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
x11 = { version = "2.21", features = ["xlib", "xinput", "xrandr"] }
